# EC_proteomics

./: .gitignore  EC_proteomics.py  EC_proteomics_analysis.ipynb  LICENSE  README.md  VIRTUAL_ENV_GUIDE.md  config.py  proteomics_analysis.py  proteomics_analysis_example.ipynb  pyproject.toml  requirements.txt  setup.py  setup_environment.py  simple_example.py  test_analysis.py
